# cosinnus-core

./: .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  Gruntfile.js  MANIFEST.in  Makefile  README  README.md  bower.json  nunjucks.config.js  package-lock.json  package.json  publiccode.yml  pyproject.toml  requirements._step2.txt  requirements._step2.txt.py  requirements.txt  requirements.txt.py  requirements_step1.txt  requirements_step1.txt.py  setup.cfg  setup.py  tox.ini  webpack.config.js
ajax_forms/: ajax_forms.py
announcements/: admin.py  context_processors.py  managers.py  models.py
cosinnus/: __init__.py  admin.py  ajax.py  apps.py  backends.py  celery.py  checks.py  conf.py  consumers.py  cosinnus_notifications.py  cron.py  default_settings.py  fields.py  gooddb.py  hooks.py  i18n_fixture_strings.py  image_formats.py  integration.py  oauth_validators.py  search_indexes.py  tasks.py  translation.py  urls.py  urls_api.py  urls_api_frontend.py  urls_select2.py  version_history.py  wagtail_hooks.py
cosinnus_cloud/: __init__.py  apps.py  cosinnus_app.py  cosinnus_notifications.py  dashboard.py  hooks.py  models.py  urls.py  views.py
cosinnus_conference/: __init__.py  admin.py  apps.py  bbb_streaming.py  cosinnus_app.py  cron.py  forms.py  urls.py  utils.py  views.py
cosinnus_deck/: apps.py  checks.py  conf.py  cosinnus_app.py  cosinnus_notifications.py  deck.py  integration.py  models.py  urls.py  urls_api_frontend.py  views.py
cosinnus_etherpad/: admin.py  apps.py  conf.py  cosinnus_app.py  dashboard.py  (+10 more)
(+3890 files in other folders)
